[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aml"
version = "0.1.0"
description = "Adaptive Memory Layer — self-learning memory middleware"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "pgvector>=0.3,<1",
    "alembic>=1.14,<2",
    "redis>=5.0,<6",
    "httpx>=0.27,<1",
    "openai>=1.50,<2",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-httpx>=0.34,<1",
    "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
